[project]
name = "langchaintest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.1",
    "fastapi>=0.124.4",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.3",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.0.3",
    "uvicorn>=0.38.0",
]
